objects/RIC_Amb_Modele_Activation__c.object
<CustomObject>
    <description>RIC_AMB : This object allows administrators and RMC to create different &quot;modèles d&apos;activations&quot;</description>
    <fields>
        <fullName>RIC_Amb_Cible_client_typologie_image__c</fullName>
        <label>Cible client typologie-image</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Energy Bar-Iconique</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Leader</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Premium</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Standard</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Iconique</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Leader</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Premium</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Standard</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Iconique</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Leader</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Premium</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Standard</fullName>
                </value>
                <value>
                    <fullName>Night Club-Iconique</fullName>
                </value>
                <value>
                    <fullName>Night Club-Leader</fullName>
                </value>
                <value>
                    <fullName>Night Club-Premium</fullName>
                </value>
                <value>
                    <fullName>Night Club-Standard</fullName>
                </value>
                <value>
                    <fullName>Caviste-Leader</fullName>
                </value>
                <value>
                    <fullName>Caviste-Premium</fullName>
                </value>
                <value>
                    <fullName>Caviste-Standard</fullName>
                </value>
                <value>
                    <fullName>BtB</fullName>
                </value>
                <value>
                    <fullName>Institutionnels</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Grossiste</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>Proxi HDO</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Cible_consommateur__c</fullName>
        <label>Cible Consommateur</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rose</fullName>
                </value>
                <value>
                    <fullName>Jeunes Festifs</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>Bros</fullName>
                </value>
                <value>
                    <fullName>Ucm</fullName>
                </value>
                <value>
                    <fullName>Lads</fullName>
                </value>
                <value>
                    <fullName>Gents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Commentaire__c</fullName>
        <label>Commentaire</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Date_de_d_but__c</fullName>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Date_de_fin__c</fullName>
        <label>Date de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_External_ID_Modele__c</fullName>
        <externalId>true</externalId>
        <label>External ID Modèle</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RIC_Amb_Marque_dont_mutli_marque__c</fullName>
        <label>Marque (dont mutli-marque)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RIC_Amb_Marques_et_Qualite</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Reference_Ricard__c</fullName>
        <label>Reference Ricard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Modèle d&apos;Activation</label>
    <listViews>
        <fullName>RIC_Amb_View_Animation</fullName>
        <columns>NAME</columns>
        <columns>RIC_Amb_Cible_consommateur__c</columns>
        <columns>RIC_Amb_Date_de_d_but__c</columns>
        <columns>RIC_Amb_Date_de_fin__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RIC_Amb_Modele_Activation__c.RIC_Amb_Modele_Animation</value>
        </filters>
        <label>Animation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RIC_Amb_View_Evenement</fullName>
        <columns>NAME</columns>
        <columns>RIC_Amb_Cible_client_typologie_image__c</columns>
        <columns>RIC_Amb_Cible_consommateur__c</columns>
        <columns>RIC_Amb_Date_de_d_but__c</columns>
        <columns>RIC_Amb_Date_de_fin__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RIC_Amb_Modele_Activation__c.RIC_Amb_Modele_Evenement</value>
        </filters>
        <label>Evènement</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Libellé du modèle d&apos;activation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modèles d&apos;Activations</pluralLabel>
    <recordTypes>
        <fullName>RIC_Amb_Modele_Animation</fullName>
        <active>true</active>
        <description>Accès aux modèles d&apos;animation</description>
        <label>Animation</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Amb_Modele_Evenement</fullName>
        <active>true</active>
        <description>Accès aux modèles d&apos;évènement</description>
        <label>Evènement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>